corrections in the merger

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,88 +12,88 @@ export_format: 'csv'
 # Data type definitions for each table
 dtypes:
   empresas:
-    cnpj_basico: "str"
-    razao_social: "str"
-    natureza_juridica: "str"
-    qualificacao_do_responsavel: "str"
-    capital_social: "str"
-    porte_da_empresa: "str"
-    ente_federativo_responsavel: "str"
+    cnpj_basico: "string"
+    razao_social: "string"
+    natureza_juridica: "string"
+    qualificacao_do_responsavel: "string"
+    capital_social: "string"
+    porte_da_empresa: "string"
+    ente_federativo_responsavel: "string"
 
   estabelecimentos:
-    cnpj_basico: "str"
-    cnpj_ordem: "str"
-    cnpj_dv: "str"
-    identificador_matriz_filial: "str"
-    nome_fantasia: "str"
-    situacao_cadastral: "str"
-    data_situacao_cadastral: "str"
-    motivo_situacao_cadastral: "str"
-    nome_da_cidade_no_exterior: "str"
-    pais: "str"
-    data_de_inicio_da_atividade: "str"
-    cnae_fiscal_principal: "str"
-    cnae_fiscal_secundaria: "str"
-    tipo_de_logradouro: "str"
-    logradouro: "str"
-    numero: "str"
-    complemento: "str"
-    bairro: "str"
-    cep: "str"
-    uf: "str"
-    municipio: "str"
-    ddd1: "str"
-    telefone1: "str"
-    ddd2: "str"
-    telefone2: "str"
-    ddd_do_fax: "str"
-    fax: "str"
-    correio_eletronico: "str"
-    situacao_especial: "str"
-    data_da_situacao_especial: "str"
+    cnpj_basico: "string"
+    cnpj_ordem: "string"
+    cnpj_dv: "string"
+    identificador_matriz_filial: "string"
+    nome_fantasia: "string"
+    situacao_cadastral: "string"
+    data_situacao_cadastral: "string"
+    motivo_situacao_cadastral: "string"
+    nome_da_cidade_no_exterior: "string"
+    pais: "string"
+    data_de_inicio_da_atividade: "string"
+    cnae_fiscal_principal: "string"
+    cnae_fiscal_secundaria: "string"
+    tipo_de_logradouro: "string"
+    logradouro: "string"
+    numero: "string"
+    complemento: "string"
+    bairro: "string"
+    cep: "string"
+    uf: "string"
+    municipio: "string"
+    ddd1: "string"
+    telefone1: "string"
+    ddd2: "string"
+    telefone2: "string"
+    ddd_do_fax: "string"
+    fax: "string"
+    correio_eletronico: "string"
+    situacao_especial: "string"
+    data_da_situacao_especial: "string"
 
   socios:
-    cnpj_basico: "str"
-    identificador_de_socio: "str"
-    nome_do_socio: "str"
-    cnpj_ou_cpf_do_socio: "str"
-    qualificacao_do_socio: "str"
-    data_de_entrada_sociedade: "str"
-    pais: "str"
-    representante_legal: "str"
-    nome_do_representante: "str"
-    qualificacao_do_representante_legal: "str"
-    faixa_etaria: "str"
+    cnpj_basico: "string"
+    identificador_de_socio: "string"
+    nome_do_socio: "string"
+    cnpj_ou_cpf_do_socio: "string"
+    qualificacao_do_socio: "string"
+    data_de_entrada_sociedade: "string"
+    pais: "string"
+    representante_legal: "string"
+    nome_do_representante: "string"
+    qualificacao_do_representante_legal: "string"
+    faixa_etaria: "string"
 
   cnaes:
-    cnpj_basico: "str"
-    cnae_fiscal_secundaria: "str"
+    cnpj_basico: "string"
+    cnae_fiscal_secundaria: "string"
 
   motivos:
-    codigo_motivo: "str"
-    descricao_motivo: "str"
+    codigo_motivo: "string"
+    descricao_motivo: "string"
 
   municipios:
-    codigo_municipio: "str"
-    nome_municipio: "str"
+    codigo_municipio: "string"
+    nome_municipio: "string"
 
   natureza:
-    codigo_natureza_juridica: "str"
-    descricao_natureza_juridica: "str"
+    codigo_natureza_juridica: "string"
+    descricao_natureza_juridica: "string"
 
   qualificacoes:
-    codigo_qualificacao: "str"
-    descricao_qualificacao: "str"
+    codigo_qualificacao: "string"
+    descricao_qualificacao: "string"
 
   paises:
-    codigo_pais: "str"
-    nome_pais: "str"
+    codigo_pais: "string"
+    nome_pais: "string"
 
   simples:
-    cnpj_basico: "str"
-    opcao_pelo_simples: "str"
-    data_opcao_simples: "str"
-    data_exclusao_simples: "str"
-    opcao_pelo_mei: "str"
-    data_opcao_mei: "str"
-    data_exclusao_mei: "str"
+    cnpj_basico: "string"
+    opcao_pelo_simples: "string"
+    data_opcao_simples: "string"
+    data_exclusao_simples: "string"
+    opcao_pelo_mei: "string"
+    data_opcao_mei: "string"
+    data_exclusao_mei: "string"
