--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 services:
   postgres:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: cnpj-postgres:latest
+    image: postgres:16-alpine
     container_name: cnpj-postgres
     restart: unless-stopped
     environment:
@@ -14,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - cnpj_postgres_logs:/app/logs
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U cnpj -d cnpj_db"]
       interval: 10s
@@ -22,6 +19,31 @@ services:
       retries: 5
     networks:
       - cnpj_network
+
+  setup:
+    image: ghcr.io/astral-sh/uv:python3.12-bookworm-slim
+    container_name: cnpj-setup
+    working_dir: /app
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: cnpj_db
+      POSTGRES_USER: cnpj
+      POSTGRES_PASSWORD: cnpj123
+      POSTGRES_FORCE_RECREATE: true
+      POSTGRES_FORCE_TRUNCATE: false
+      POSTGRES_BATCH_SIZE: 500000
+    volumes:
+      - ./scripts:/app/scripts
+      - ./config:/app/config:ro
+      - ./pyproject.toml:/app/pyproject.toml:ro
+      #- ./data_incoming:/app/data_incoming
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - cnpj_network
+    command: sh /app/scripts/setup.sh
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -45,9 +67,9 @@ services:
       - cnpj_network
 
 volumes:
-  pgadmin_data:
+  postgres_data:
     driver: local
-  cnpj_postgres_logs:
+  pgadmin_data:
     driver: local
 
 networks:
